# Trader-Bot

./: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_CHECKLIST.md  Makefile  RUNBOOK.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_dedupe_market_bars.py  002_runtime_correctness_guards.py  003_fill_execution_identity.py  004_quote_snapshots_execution_attribution.py  005_reprice_tracking.py
scripts/: backfill_alpaca_bars.py  compare_frameworks.py  paper_readiness_report.py  run_backtest.py  run_confidence_backtest.py  run_walkforward_backtest.py  seed_sample_bars.py  seed_symbols.py  train_models_from_history.py
src/trader/: __init__.py  celery_app.py  config.py  logging.py  main.py
tests/: __init__.py  conftest.py
tests/fixtures/: synthetic_bars.py  synthetic_features.py
tests/integration/: test_api_endpoints.py  test_broker_provider.py  test_data_provider.py  test_db_migrations.py  test_trading_cycle.py
tests/unit/: test_backtest_metrics.py  test_backtest_simulator.py  test_comparison.py  test_confidence_backtest.py  test_config.py  test_execution_idempotency.py  test_features.py  test_funnel.py  test_historical_data.py  test_manage_open_orders.py  test_marketable_limits.py  test_model_interfaces.py  test_model_loader.py  test_order_translation.py  test_pipeline_walkforward.py  test_position_ledger.py  test_quote_snapshots.py  test_reconciliation.py  test_risk_engine.py  test_runtime_correctness.py  test_strategy_engine.py  test_system_state.py  test_tradable_labels.py  test_trade_updates.py  (+2 more)
(+132 files in other folders)
