[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-trader"
version = "0.1.0"
description = "Institutional-style autonomous intraday trading platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "hiredis>=3.1.0",
    "celery[redis]>=5.4.0",
    "alpaca-py>=0.33.1",
    "databento>=0.43.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.6.0",
    "lightgbm>=4.5.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.2",
    "orjson>=3.10.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
